--- a/css/style.css
+++ b/css/style.css
@@ -133,5 +133,10 @@ img {
 @media screen and (max-width:767px) {
    .container{
         width: 100%;
+        display: flex;
+        flex-wrap: wrap;
    }
 }
+
+
+
