--- a/css/style.css
+++ b/css/style.css
@@ -130,13 +130,33 @@ img {
 
 
 
-@media screen and (max-width:767px) {
+@media screen and (max-width:1100px) {
    .container{
         width: 100%;
-        display: flex;
-        flex-wrap: wrap;
    }
 }
 
+
+@media screen and (max-width:720px) {
+    .row{
+        flex-direction: column;
+    }
+
+    .row .col{
+        width: 100%;
+    }
+
+    .why-us{
+        background-color: #222;
+    }
+
+    .steps, .why-us{
+        margin-bottom: 0;
+    }
+
+    .why-us{
+        padding: 3rem 0;
+    }
+}
 
 
